<?xml version="1.0" encoding="utf-8"?>
<!-- George Opare n01669576 -->
<resources>

    <string name="app_name">GeorgeLab9</string>

    <!-- navigation drawer -->
    <string name="geo_full_name">George Opare</string>
    <string name="geo_email">n01669576@humber.ca</string>
    <string name="geo_menu_1">Ge1orge</string>
    <string name="geo_menu_2">Op2are</string>
    <string name="geo_open_drawer">Open navigation drawer</string>
    <string name="geo_close_drawer">Close navigation drawer</string>

    <!-- toolbar menu -->
    <string name="geo_options">Options</string>
    <string name="geo_sub_toggle">Geo</string>
    <string name="geo_sub_search">Opa</string>

    <!-- search dialog -->
    <string name="geo_search_hint">Enter search phrase</string>
    <string name="geo_search_button">Search</string>
    <string name="geo_search_empty">George Opare - Enter a search phrase</string>

    <!-- fragment 1: courses -->
    <string name="geo_hint_course_name">Enter course Name</string>
    <string name="geo_hint_course_desc">Enter Course Description</string>
    <string name="geo_save">Save</string>
    <string name="geo_add">Add</string>
    <string name="geo_delete">Delete</string>
    <string name="geo_no_data">No data to delete</string>
    <string name="geo_enter_course">George Opare - Enter course name and description</string>
    <string name="geo_saved">Courses saved</string>

    <!-- fragment 2: file io -->
    <string name="geo_file_name">File Name</string>
    <string name="geo_file_contents">File Contents</string>
    <string name="geo_create_file">Create File</string>
    <string name="geo_delete_file">Delete File</string>
    <string name="geo_write_file">Write File</string>
    <string name="geo_read_file">Read File</string>
    <string name="geo_persistent">Persistent File</string>
    <string name="geo_cache">Cache File</string>
    <string name="geo_name_missing">George Opare - File name missing</string>
    <string name="geo_content_missing">George Opare - Content Missing</string>
    <string name="geo_dismiss">Dismiss</string>
    <string name="geo_file_created">File created</string>
    <string name="geo_file_exists">File already exists</string>
    <string name="geo_file_deleted">File deleted</string>
    <string name="geo_file_not_found">File not found</string>
    <string name="geo_file_error">Error accessing file</string>
    <string name="geo_file_written">File written</string>

</resources>